eo-phi-normalizer/src/Language/EO/Phi/Syntax/Par.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.1.1 from Par.y
-----------------------------------------------------------------------------

state 15 contains 1 shift/reduce conflicts.
state 55 contains 1 reduce/reduce conflicts.
state 79 contains 1 shift/reduce conflicts.
state 80 contains 1 shift/reduce conflicts.
state 88 contains 1 reduce/reduce conflicts.
state 93 contains 1 shift/reduce conflicts.

rule 14 is unused

terminal L_Function is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram_internal -> Program                (0)
	%start_pObject_internal -> Object                  (1)
	%start_pAbstractObject_internal -> AbstractObject   (2)
	%start_pDispatchedObject_internal -> DispatchedObject   (3)
	%start_pBinding_internal -> Binding                (4)
	%start_pListBinding_internal -> ListBinding        (5)
	%start_pBindings_internal -> Bindings              (6)
	%start_pListBindings_internal -> ListBindings      (7)
	%start_pDispatch_internal -> Dispatch              (8)
	%start_pAttribute_internal -> Attribute            (9)
	%start_pListAttribute_internal -> ListAttribute    (10)
	%start_pDisp_internal -> Disp                      (11)
	%start_pListDisp_internal -> ListDisp              (12)
	Bytes -> L_Bytes                                   (13)
	Function -> L_Function                             (14)
	LabelId -> L_LabelId                               (15)
	AlphaIndex -> L_AlphaIndex                         (16)
	Program -> '{' ListBinding '}'                     (17)
	Object -> '{' ListBinding '}'                      (18)
	Object -> AbstractObject '{' ListBinding '}' ListBindings   (19)
	Object -> Dispatch                                 (20)
	Object -> '⊥'                                      (21)
	AbstractObject -> '{' ListBinding '}'              (22)
	AbstractObject -> Dispatch                         (23)
	AbstractObject -> '⊥'                              (24)
	DispatchedObject -> '{' ListBinding '}'            (25)
	DispatchedObject -> '⊥'                            (26)
	Binding -> Attribute '↦' Object                    (27)
	Binding -> Attribute '↦' '∅'                       (28)
	Binding -> 'Δ' '⤍' Bytes                           (29)
	Binding -> 'λ' '⤍'                                 (30)
	ListBinding ->                                     (31)
	ListBinding -> Binding                             (32)
	ListBinding -> Binding ',' ListBinding             (33)
	Bindings -> '{' ListBinding '}'                    (34)
	ListBindings ->                                    (35)
	ListBindings -> Bindings ListBindings              (36)
	Dispatch -> DispatchedObject ListBindings '.' ListAttribute ListDisp   (37)
	Dispatch -> 'Φ' '.' ListAttribute ListDisp         (38)
	Dispatch -> 'ξ' '.' ListAttribute ListDisp         (39)
	Attribute -> 'φ'                                   (40)
	Attribute -> 'ρ'                                   (41)
	Attribute -> 'σ'                                   (42)
	Attribute -> 'ν'                                   (43)
	Attribute -> LabelId                               (44)
	Attribute -> AlphaIndex                            (45)
	ListAttribute -> Attribute                         (46)
	ListAttribute -> Attribute '.' ListAttribute       (47)
	Disp -> '{' ListBinding '}' Bindings '.' ListAttribute   (48)
	ListDisp ->                                        (49)
	ListDisp -> Disp ListDisp                          (50)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	','            { PT _ (TS _ 1) }
	'.'            { PT _ (TS _ 2) }
	'{'            { PT _ (TS _ 3) }
	'}'            { PT _ (TS _ 4) }
	'Δ'            { PT _ (TS _ 5) }
	'Φ'            { PT _ (TS _ 6) }
	'λ'            { PT _ (TS _ 7) }
	'ν'            { PT _ (TS _ 8) }
	'ξ'            { PT _ (TS _ 9) }
	'ρ'            { PT _ (TS _ 10) }
	'σ'            { PT _ (TS _ 11) }
	'φ'            { PT _ (TS _ 12) }
	'↦'            { PT _ (TS _ 13) }
	'∅'            { PT _ (TS _ 14) }
	'⊥'            { PT _ (TS _ 15) }
	'⤍'            { PT _ (TS _ 16) }
	L_Bytes        { PT _ (T_Bytes _) }
	L_Function     { PT _ (T_Function _) }
	L_LabelId      { PT _ (T_LabelId _) }
	L_AlphaIndex   { PT _ (T_AlphaIndex _) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram_internal rule  0
	%start_pObject_internal rule  1
	%start_pAbstractObject_internal rule  2
	%start_pDispatchedObject_internal rule  3
	%start_pBinding_internal rule  4
	%start_pListBinding_internal rule  5
	%start_pBindings_internal rule  6
	%start_pListBindings_internal rule  7
	%start_pDispatch_internal rule  8
	%start_pAttribute_internal rule  9
	%start_pListAttribute_internal rule  10
	%start_pDisp_internal rule  11
	%start_pListDisp_internal rule  12
	Bytes           rule  13
	Function        rule  14
	LabelId         rule  15
	AlphaIndex      rule  16
	Program         rule  17
	Object          rules 18, 19, 20, 21
	AbstractObject  rules 22, 23, 24
	DispatchedObject rules 25, 26
	Binding         rules 27, 28, 29, 30
	ListBinding     rules 31, 32, 33
	Bindings        rule  34
	ListBindings    rules 35, 36
	Dispatch        rules 37, 38, 39
	Attribute       rules 40, 41, 42, 43, 44, 45
	ListAttribute   rules 46, 47
	Disp            rule  48
	ListDisp        rules 49, 50

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_pProgram_internal -> . Program               (rule 0)

	'{'            shift, and enter state 57

	Program        goto state 56

State 1

	%start_pObject_internal -> . Object                 (rule 1)

	'{'            shift, and enter state 54
	'Φ'            shift, and enter state 33
	'ξ'            shift, and enter state 34
	'⊥'            shift, and enter state 55

	Object         goto state 51
	AbstractObject goto state 52
	DispatchedObjectgoto state 30
	Dispatch       goto state 53

State 2

	%start_pAbstractObject_internal -> . AbstractObject    (rule 2)

	'{'            shift, and enter state 49
	'Φ'            shift, and enter state 33
	'ξ'            shift, and enter state 34
	'⊥'            shift, and enter state 50

	AbstractObject goto state 47
	DispatchedObjectgoto state 30
	Dispatch       goto state 48

State 3

	%start_pDispatchedObject_internal -> . DispatchedObject    (rule 3)

	'{'            shift, and enter state 32
	'⊥'            shift, and enter state 35

	DispatchedObjectgoto state 46

State 4

	%start_pBinding_internal -> . Binding               (rule 4)

	'Δ'            shift, and enter state 43
	'λ'            shift, and enter state 44
	'ν'            shift, and enter state 23
	'ρ'            shift, and enter state 24
	'σ'            shift, and enter state 25
	'φ'            shift, and enter state 26
	L_LabelId      shift, and enter state 27
	L_AlphaIndex   shift, and enter state 28

	LabelId        goto state 19
	AlphaIndex     goto state 20
	Binding        goto state 45
	Attribute      goto state 42

State 5

	%start_pListBinding_internal -> . ListBinding       (rule 5)

	'Δ'            shift, and enter state 43
	'λ'            shift, and enter state 44
	'ν'            shift, and enter state 23
	'ρ'            shift, and enter state 24
	'σ'            shift, and enter state 25
	'φ'            shift, and enter state 26
	L_LabelId      shift, and enter state 27
	L_AlphaIndex   shift, and enter state 28
	%eof           reduce using rule 31

	LabelId        goto state 19
	AlphaIndex     goto state 20
	Binding        goto state 40
	ListBinding    goto state 41
	Attribute      goto state 42

State 6

	%start_pBindings_internal -> . Bindings             (rule 6)

	'{'            shift, and enter state 38

	Bindings       goto state 39

State 7

	%start_pListBindings_internal -> . ListBindings     (rule 7)

	'{'            shift, and enter state 38
	%eof           reduce using rule 35

	Bindings       goto state 36
	ListBindings   goto state 37

State 8

	%start_pDispatch_internal -> . Dispatch             (rule 8)

	'{'            shift, and enter state 32
	'Φ'            shift, and enter state 33
	'ξ'            shift, and enter state 34
	'⊥'            shift, and enter state 35

	DispatchedObjectgoto state 30
	Dispatch       goto state 31

State 9

	%start_pAttribute_internal -> . Attribute           (rule 9)

	'ν'            shift, and enter state 23
	'ρ'            shift, and enter state 24
	'σ'            shift, and enter state 25
	'φ'            shift, and enter state 26
	L_LabelId      shift, and enter state 27
	L_AlphaIndex   shift, and enter state 28

	LabelId        goto state 19
	AlphaIndex     goto state 20
	Attribute      goto state 29

State 10

	%start_pListAttribute_internal -> . ListAttribute    (rule 10)

	'ν'            shift, and enter state 23
	'ρ'            shift, and enter state 24
	'σ'            shift, and enter state 25
	'φ'            shift, and enter state 26
	L_LabelId      shift, and enter state 27
	L_AlphaIndex   shift, and enter state 28

	LabelId        goto state 19
	AlphaIndex     goto state 20
	Attribute      goto state 21
	ListAttribute  goto state 22

State 11

	%start_pDisp_internal -> . Disp                     (rule 11)

	'{'            shift, and enter state 17

	Disp           goto state 18

State 12

	%start_pListDisp_internal -> . ListDisp             (rule 12)

	'{'            shift, and enter state 17
	%eof           reduce using rule 49

	Disp           goto state 15
	ListDisp       goto state 16

State 13

	Bytes -> . L_Bytes                                  (rule 13)

	L_Bytes        shift, and enter state 14


State 14

	Bytes -> L_Bytes .                                  (rule 13)

	','            reduce using rule 13
	'}'            reduce using rule 13
	%eof           reduce using rule 13


State 15

	ListDisp -> Disp . ListDisp                         (rule 50)

	','            reduce using rule 49
	'{'            shift, and enter state 17
			(reduce using rule 49)

	'}'            reduce using rule 49
	%eof           reduce using rule 49

	Disp           goto state 15
	ListDisp       goto state 74

State 16

	%start_pListDisp_internal -> ListDisp .             (rule 12)

	%eof           accept


State 17

	Disp -> '{' . ListBinding '}' Bindings '.' ListAttribute    (rule 48)

	'}'            reduce using rule 31
	'Δ'            shift, and enter state 43
	'λ'            shift, and enter state 44
	'ν'            shift, and enter state 23
	'ρ'            shift, and enter state 24
	'σ'            shift, and enter state 25
	'φ'            shift, and enter state 26
	L_LabelId      shift, and enter state 27
	L_AlphaIndex   shift, and enter state 28

	LabelId        goto state 19
	AlphaIndex     goto state 20
	Binding        goto state 40
	ListBinding    goto state 73
	Attribute      goto state 42

State 18

	%start_pDisp_internal -> Disp .                     (rule 11)

	%eof           accept


State 19

	Attribute -> LabelId .                              (rule 44)

	','            reduce using rule 44
	'.'            reduce using rule 44
	'{'            reduce using rule 44
	'}'            reduce using rule 44
	'↦'            reduce using rule 44
	%eof           reduce using rule 44


State 20

	Attribute -> AlphaIndex .                           (rule 45)

	','            reduce using rule 45
	'.'            reduce using rule 45
	'{'            reduce using rule 45
	'}'            reduce using rule 45
	'↦'            reduce using rule 45
	%eof           reduce using rule 45


State 21

	ListAttribute -> Attribute .                        (rule 46)
	ListAttribute -> Attribute . '.' ListAttribute      (rule 47)

	','            reduce using rule 46
	'.'            shift, and enter state 72
	'{'            reduce using rule 46
	'}'            reduce using rule 46
	%eof           reduce using rule 46


State 22

	%start_pListAttribute_internal -> ListAttribute .    (rule 10)

	%eof           accept


State 23

	Attribute -> 'ν' .                                  (rule 43)

	','            reduce using rule 43
	'.'            reduce using rule 43
	'{'            reduce using rule 43
	'}'            reduce using rule 43
	'↦'            reduce using rule 43
	%eof           reduce using rule 43


State 24

	Attribute -> 'ρ' .                                  (rule 41)

	','            reduce using rule 41
	'.'            reduce using rule 41
	'{'            reduce using rule 41
	'}'            reduce using rule 41
	'↦'            reduce using rule 41
	%eof           reduce using rule 41


State 25

	Attribute -> 'σ' .                                  (rule 42)

	','            reduce using rule 42
	'.'            reduce using rule 42
	'{'            reduce using rule 42
	'}'            reduce using rule 42
	'↦'            reduce using rule 42
	%eof           reduce using rule 42


State 26

	Attribute -> 'φ' .                                  (rule 40)

	','            reduce using rule 40
	'.'            reduce using rule 40
	'{'            reduce using rule 40
	'}'            reduce using rule 40
	'↦'            reduce using rule 40
	%eof           reduce using rule 40


State 27

	LabelId -> L_LabelId .                              (rule 15)

	','            reduce using rule 15
	'.'            reduce using rule 15
	'{'            reduce using rule 15
	'}'            reduce using rule 15
	'↦'            reduce using rule 15
	%eof           reduce using rule 15


State 28

	AlphaIndex -> L_AlphaIndex .                        (rule 16)

	','            reduce using rule 16
	'.'            reduce using rule 16
	'{'            reduce using rule 16
	'}'            reduce using rule 16
	'↦'            reduce using rule 16
	%eof           reduce using rule 16


State 29

	%start_pAttribute_internal -> Attribute .           (rule 9)

	%eof           accept


State 30

	Dispatch -> DispatchedObject . ListBindings '.' ListAttribute ListDisp    (rule 37)

	'.'            reduce using rule 35
	'{'            shift, and enter state 38

	Bindings       goto state 36
	ListBindings   goto state 71

State 31

	%start_pDispatch_internal -> Dispatch .             (rule 8)

	%eof           accept


State 32

	DispatchedObject -> '{' . ListBinding '}'           (rule 25)

	'}'            reduce using rule 31
	'Δ'            shift, and enter state 43
	'λ'            shift, and enter state 44
	'ν'            shift, and enter state 23
	'ρ'            shift, and enter state 24
	'σ'            shift, and enter state 25
	'φ'            shift, and enter state 26
	L_LabelId      shift, and enter state 27
	L_AlphaIndex   shift, and enter state 28

	LabelId        goto state 19
	AlphaIndex     goto state 20
	Binding        goto state 40
	ListBinding    goto state 70
	Attribute      goto state 42

State 33

	Dispatch -> 'Φ' . '.' ListAttribute ListDisp        (rule 38)

	'.'            shift, and enter state 69


State 34

	Dispatch -> 'ξ' . '.' ListAttribute ListDisp        (rule 39)

	'.'            shift, and enter state 68


State 35

	DispatchedObject -> '⊥' .                           (rule 26)

	'.'            reduce using rule 26
	'{'            reduce using rule 26
	%eof           reduce using rule 26


State 36

	ListBindings -> Bindings . ListBindings             (rule 36)

	','            reduce using rule 35
	'.'            reduce using rule 35
	'{'            shift, and enter state 38
	'}'            reduce using rule 35
	%eof           reduce using rule 35

	Bindings       goto state 36
	ListBindings   goto state 67

State 37

	%start_pListBindings_internal -> ListBindings .     (rule 7)

	%eof           accept


State 38

	Bindings -> '{' . ListBinding '}'                   (rule 34)

	'}'            reduce using rule 31
	'Δ'            shift, and enter state 43
	'λ'            shift, and enter state 44
	'ν'            shift, and enter state 23
	'ρ'            shift, and enter state 24
	'σ'            shift, and enter state 25
	'φ'            shift, and enter state 26
	L_LabelId      shift, and enter state 27
	L_AlphaIndex   shift, and enter state 28

	LabelId        goto state 19
	AlphaIndex     goto state 20
	Binding        goto state 40
	ListBinding    goto state 66
	Attribute      goto state 42

State 39

	%start_pBindings_internal -> Bindings .             (rule 6)

	%eof           accept


State 40

	ListBinding -> Binding .                            (rule 32)
	ListBinding -> Binding . ',' ListBinding            (rule 33)

	','            shift, and enter state 65
	'}'            reduce using rule 32
	%eof           reduce using rule 32


State 41

	%start_pListBinding_internal -> ListBinding .       (rule 5)

	%eof           accept


State 42

	Binding -> Attribute . '↦' Object                   (rule 27)
	Binding -> Attribute . '↦' '∅'                      (rule 28)

	'↦'            shift, and enter state 64


State 43

	Binding -> 'Δ' . '⤍' Bytes                          (rule 29)

	'⤍'            shift, and enter state 63


State 44

	Binding -> 'λ' . '⤍'                                (rule 30)

	'⤍'            shift, and enter state 62


State 45

	%start_pBinding_internal -> Binding .               (rule 4)

	%eof           accept


State 46

	%start_pDispatchedObject_internal -> DispatchedObject .    (rule 3)

	%eof           accept


State 47

	%start_pAbstractObject_internal -> AbstractObject .    (rule 2)

	%eof           accept


State 48

	AbstractObject -> Dispatch .                        (rule 23)

	%eof           reduce using rule 23


State 49

	AbstractObject -> '{' . ListBinding '}'             (rule 22)
	DispatchedObject -> '{' . ListBinding '}'           (rule 25)

	'}'            reduce using rule 31
	'Δ'            shift, and enter state 43
	'λ'            shift, and enter state 44
	'ν'            shift, and enter state 23
	'ρ'            shift, and enter state 24
	'σ'            shift, and enter state 25
	'φ'            shift, and enter state 26
	L_LabelId      shift, and enter state 27
	L_AlphaIndex   shift, and enter state 28

	LabelId        goto state 19
	AlphaIndex     goto state 20
	Binding        goto state 40
	ListBinding    goto state 61
	Attribute      goto state 42

State 50

	AbstractObject -> '⊥' .                             (rule 24)
	DispatchedObject -> '⊥' .                           (rule 26)

	'.'            reduce using rule 26
	'{'            reduce using rule 26
	%eof           reduce using rule 24


State 51

	%start_pObject_internal -> Object .                 (rule 1)

	%eof           accept


State 52

	Object -> AbstractObject . '{' ListBinding '}' ListBindings    (rule 19)

	'{'            shift, and enter state 60


State 53

	Object -> Dispatch .                                (rule 20)
	AbstractObject -> Dispatch .                        (rule 23)

	','            reduce using rule 20
	'{'            reduce using rule 23
	'}'            reduce using rule 20
	%eof           reduce using rule 20


State 54

	Object -> '{' . ListBinding '}'                     (rule 18)
	AbstractObject -> '{' . ListBinding '}'             (rule 22)
	DispatchedObject -> '{' . ListBinding '}'           (rule 25)

	'}'            reduce using rule 31
	'Δ'            shift, and enter state 43
	'λ'            shift, and enter state 44
	'ν'            shift, and enter state 23
	'ρ'            shift, and enter state 24
	'σ'            shift, and enter state 25
	'φ'            shift, and enter state 26
	L_LabelId      shift, and enter state 27
	L_AlphaIndex   shift, and enter state 28

	LabelId        goto state 19
	AlphaIndex     goto state 20
	Binding        goto state 40
	ListBinding    goto state 59
	Attribute      goto state 42

State 55

	Object -> '⊥' .                                     (rule 21)
	AbstractObject -> '⊥' .                             (rule 24)
	DispatchedObject -> '⊥' .                           (rule 26)

	','            reduce using rule 21
	'.'            reduce using rule 26
	'{'            reduce using rule 26
			(reduce using rule 24)

	'}'            reduce using rule 21
	%eof           reduce using rule 21


State 56

	%start_pProgram_internal -> Program .               (rule 0)

	%eof           accept


State 57

	Program -> '{' . ListBinding '}'                    (rule 17)

	'}'            reduce using rule 31
	'Δ'            shift, and enter state 43
	'λ'            shift, and enter state 44
	'ν'            shift, and enter state 23
	'ρ'            shift, and enter state 24
	'σ'            shift, and enter state 25
	'φ'            shift, and enter state 26
	L_LabelId      shift, and enter state 27
	L_AlphaIndex   shift, and enter state 28

	LabelId        goto state 19
	AlphaIndex     goto state 20
	Binding        goto state 40
	ListBinding    goto state 58
	Attribute      goto state 42

State 58

	Program -> '{' ListBinding . '}'                    (rule 17)

	'}'            shift, and enter state 89


State 59

	Object -> '{' ListBinding . '}'                     (rule 18)
	AbstractObject -> '{' ListBinding . '}'             (rule 22)
	DispatchedObject -> '{' ListBinding . '}'           (rule 25)

	'}'            shift, and enter state 88


State 60

	Object -> AbstractObject '{' . ListBinding '}' ListBindings    (rule 19)

	'}'            reduce using rule 31
	'Δ'            shift, and enter state 43
	'λ'            shift, and enter state 44
	'ν'            shift, and enter state 23
	'ρ'            shift, and enter state 24
	'σ'            shift, and enter state 25
	'φ'            shift, and enter state 26
	L_LabelId      shift, and enter state 27
	L_AlphaIndex   shift, and enter state 28

	LabelId        goto state 19
	AlphaIndex     goto state 20
	Binding        goto state 40
	ListBinding    goto state 87
	Attribute      goto state 42

State 61

	AbstractObject -> '{' ListBinding . '}'             (rule 22)
	DispatchedObject -> '{' ListBinding . '}'           (rule 25)

	'}'            shift, and enter state 86


State 62

	Binding -> 'λ' '⤍' .                                (rule 30)

	','            reduce using rule 30
	'}'            reduce using rule 30
	%eof           reduce using rule 30


State 63

	Binding -> 'Δ' '⤍' . Bytes                          (rule 29)

	L_Bytes        shift, and enter state 14

	Bytes          goto state 85

State 64

	Binding -> Attribute '↦' . Object                   (rule 27)
	Binding -> Attribute '↦' . '∅'                      (rule 28)

	'{'            shift, and enter state 54
	'Φ'            shift, and enter state 33
	'ξ'            shift, and enter state 34
	'∅'            shift, and enter state 84
	'⊥'            shift, and enter state 55

	Object         goto state 83
	AbstractObject goto state 52
	DispatchedObjectgoto state 30
	Dispatch       goto state 53

State 65

	ListBinding -> Binding ',' . ListBinding            (rule 33)

	'}'            reduce using rule 31
	'Δ'            shift, and enter state 43
	'λ'            shift, and enter state 44
	'ν'            shift, and enter state 23
	'ρ'            shift, and enter state 24
	'σ'            shift, and enter state 25
	'φ'            shift, and enter state 26
	L_LabelId      shift, and enter state 27
	L_AlphaIndex   shift, and enter state 28
	%eof           reduce using rule 31

	LabelId        goto state 19
	AlphaIndex     goto state 20
	Binding        goto state 40
	ListBinding    goto state 82
	Attribute      goto state 42

State 66

	Bindings -> '{' ListBinding . '}'                   (rule 34)

	'}'            shift, and enter state 81


State 67

	ListBindings -> Bindings ListBindings .             (rule 36)

	','            reduce using rule 36
	'.'            reduce using rule 36
	'}'            reduce using rule 36
	%eof           reduce using rule 36


State 68

	Dispatch -> 'ξ' '.' . ListAttribute ListDisp        (rule 39)

	'ν'            shift, and enter state 23
	'ρ'            shift, and enter state 24
	'σ'            shift, and enter state 25
	'φ'            shift, and enter state 26
	L_LabelId      shift, and enter state 27
	L_AlphaIndex   shift, and enter state 28

	LabelId        goto state 19
	AlphaIndex     goto state 20
	Attribute      goto state 21
	ListAttribute  goto state 80

State 69

	Dispatch -> 'Φ' '.' . ListAttribute ListDisp        (rule 38)

	'ν'            shift, and enter state 23
	'ρ'            shift, and enter state 24
	'σ'            shift, and enter state 25
	'φ'            shift, and enter state 26
	L_LabelId      shift, and enter state 27
	L_AlphaIndex   shift, and enter state 28

	LabelId        goto state 19
	AlphaIndex     goto state 20
	Attribute      goto state 21
	ListAttribute  goto state 79

State 70

	DispatchedObject -> '{' ListBinding . '}'           (rule 25)

	'}'            shift, and enter state 78


State 71

	Dispatch -> DispatchedObject ListBindings . '.' ListAttribute ListDisp    (rule 37)

	'.'            shift, and enter state 77


State 72

	ListAttribute -> Attribute '.' . ListAttribute      (rule 47)

	'ν'            shift, and enter state 23
	'ρ'            shift, and enter state 24
	'σ'            shift, and enter state 25
	'φ'            shift, and enter state 26
	L_LabelId      shift, and enter state 27
	L_AlphaIndex   shift, and enter state 28

	LabelId        goto state 19
	AlphaIndex     goto state 20
	Attribute      goto state 21
	ListAttribute  goto state 76

State 73

	Disp -> '{' ListBinding . '}' Bindings '.' ListAttribute    (rule 48)

	'}'            shift, and enter state 75


State 74

	ListDisp -> Disp ListDisp .                         (rule 50)

	','            reduce using rule 50
	'{'            reduce using rule 50
	'}'            reduce using rule 50
	%eof           reduce using rule 50


State 75

	Disp -> '{' ListBinding '}' . Bindings '.' ListAttribute    (rule 48)

	'{'            shift, and enter state 38

	Bindings       goto state 94

State 76

	ListAttribute -> Attribute '.' ListAttribute .      (rule 47)

	','            reduce using rule 47
	'{'            reduce using rule 47
	'}'            reduce using rule 47
	%eof           reduce using rule 47


State 77

	Dispatch -> DispatchedObject ListBindings '.' . ListAttribute ListDisp    (rule 37)

	'ν'            shift, and enter state 23
	'ρ'            shift, and enter state 24
	'σ'            shift, and enter state 25
	'φ'            shift, and enter state 26
	L_LabelId      shift, and enter state 27
	L_AlphaIndex   shift, and enter state 28

	LabelId        goto state 19
	AlphaIndex     goto state 20
	Attribute      goto state 21
	ListAttribute  goto state 93

State 78

	DispatchedObject -> '{' ListBinding '}' .           (rule 25)

	'.'            reduce using rule 25
	'{'            reduce using rule 25
	%eof           reduce using rule 25


State 79

	Dispatch -> 'Φ' '.' ListAttribute . ListDisp        (rule 38)

	','            reduce using rule 49
	'{'            shift, and enter state 17
			(reduce using rule 49)

	'}'            reduce using rule 49
	%eof           reduce using rule 49

	Disp           goto state 15
	ListDisp       goto state 92

State 80

	Dispatch -> 'ξ' '.' ListAttribute . ListDisp        (rule 39)

	','            reduce using rule 49
	'{'            shift, and enter state 17
			(reduce using rule 49)

	'}'            reduce using rule 49
	%eof           reduce using rule 49

	Disp           goto state 15
	ListDisp       goto state 91

State 81

	Bindings -> '{' ListBinding '}' .                   (rule 34)

	','            reduce using rule 34
	'.'            reduce using rule 34
	'{'            reduce using rule 34
	'}'            reduce using rule 34
	%eof           reduce using rule 34


State 82

	ListBinding -> Binding ',' ListBinding .            (rule 33)

	'}'            reduce using rule 33
	%eof           reduce using rule 33


State 83

	Binding -> Attribute '↦' Object .                   (rule 27)

	','            reduce using rule 27
	'}'            reduce using rule 27
	%eof           reduce using rule 27


State 84

	Binding -> Attribute '↦' '∅' .                      (rule 28)

	','            reduce using rule 28
	'}'            reduce using rule 28
	%eof           reduce using rule 28


State 85

	Binding -> 'Δ' '⤍' Bytes .                          (rule 29)

	','            reduce using rule 29
	'}'            reduce using rule 29
	%eof           reduce using rule 29


State 86

	AbstractObject -> '{' ListBinding '}' .             (rule 22)
	DispatchedObject -> '{' ListBinding '}' .           (rule 25)

	'.'            reduce using rule 25
	'{'            reduce using rule 25
	%eof           reduce using rule 22


State 87

	Object -> AbstractObject '{' ListBinding . '}' ListBindings    (rule 19)

	'}'            shift, and enter state 90


State 88

	Object -> '{' ListBinding '}' .                     (rule 18)
	AbstractObject -> '{' ListBinding '}' .             (rule 22)
	DispatchedObject -> '{' ListBinding '}' .           (rule 25)

	','            reduce using rule 18
	'.'            reduce using rule 25
	'{'            reduce using rule 25
			(reduce using rule 22)

	'}'            reduce using rule 18
	%eof           reduce using rule 18


State 89

	Program -> '{' ListBinding '}' .                    (rule 17)

	%eof           reduce using rule 17


State 90

	Object -> AbstractObject '{' ListBinding '}' . ListBindings    (rule 19)

	','            reduce using rule 35
	'{'            shift, and enter state 38
	'}'            reduce using rule 35
	%eof           reduce using rule 35

	Bindings       goto state 36
	ListBindings   goto state 97

State 91

	Dispatch -> 'ξ' '.' ListAttribute ListDisp .        (rule 39)

	','            reduce using rule 39
	'{'            reduce using rule 39
	'}'            reduce using rule 39
	%eof           reduce using rule 39


State 92

	Dispatch -> 'Φ' '.' ListAttribute ListDisp .        (rule 38)

	','            reduce using rule 38
	'{'            reduce using rule 38
	'}'            reduce using rule 38
	%eof           reduce using rule 38


State 93

	Dispatch -> DispatchedObject ListBindings '.' ListAttribute . ListDisp    (rule 37)

	','            reduce using rule 49
	'{'            shift, and enter state 17
			(reduce using rule 49)

	'}'            reduce using rule 49
	%eof           reduce using rule 49

	Disp           goto state 15
	ListDisp       goto state 96

State 94

	Disp -> '{' ListBinding '}' Bindings . '.' ListAttribute    (rule 48)

	'.'            shift, and enter state 95


State 95

	Disp -> '{' ListBinding '}' Bindings '.' . ListAttribute    (rule 48)

	'ν'            shift, and enter state 23
	'ρ'            shift, and enter state 24
	'σ'            shift, and enter state 25
	'φ'            shift, and enter state 26
	L_LabelId      shift, and enter state 27
	L_AlphaIndex   shift, and enter state 28

	LabelId        goto state 19
	AlphaIndex     goto state 20
	Attribute      goto state 21
	ListAttribute  goto state 98

State 96

	Dispatch -> DispatchedObject ListBindings '.' ListAttribute ListDisp .    (rule 37)

	','            reduce using rule 37
	'{'            reduce using rule 37
	'}'            reduce using rule 37
	%eof           reduce using rule 37


State 97

	Object -> AbstractObject '{' ListBinding '}' ListBindings .    (rule 19)

	','            reduce using rule 19
	'}'            reduce using rule 19
	%eof           reduce using rule 19


State 98

	Disp -> '{' ListBinding '}' Bindings '.' ListAttribute .    (rule 48)

	','            reduce using rule 48
	'{'            reduce using rule 48
	'}'            reduce using rule 48
	%eof           reduce using rule 48


-----------------------------------------------------------------------------
Grammar Totals
-----------------------------------------------------------------------------
Number of rules: 51
Number of terminals: 20
Number of non-terminals: 30
Number of states: 99
